@@ -869,7 +869,7 @@ REPLACE INTO `mob_db` VALUES (1781,'DROSERA','Drosera','Drosera',46,7221,0,2612,
 REPLACE INTO `mob_db` VALUES (1782,'ROWEEN','Roween','Roween',31,5716,0,1669,1266,1,298,377,0,7,51,39,48,18,67,19,10,12,1,2,24,0x108B,200,412,840,300,0,0,0,0,0,0,0,0,7564,3000,919,3000,992,50,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
 REPLACE INTO `mob_db` VALUES (1783,'GALION','Galion','Galion',44,32240,0,10020,3368,1,336,441,11,12,51,52,59,25,72,32,10,12,1,2,44,0x11AB,150,864,624,360,0,0,0,0,0,0,0,0,7564,3000,919,3000,996,10,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
 REPLACE INTO `mob_db` VALUES (1784,'STAPO','Stapo','Stapo',23,666,0,332,221,1,135,370,90,5,12,11,15,12,23,1,10,12,0,0,42,0x83,300,936,792,432,0,0,0,0,0,0,0,0,909,1000,7312,1000,512,1000,7126,100,993,10,0,0,0,0,0,0,0,0,0,0);
-REPLACE INTO `mob_db` VALUES (1785,'ATROCE','Atros','Atros',82,1008420,0,295550,118895,2,2526,3646,25,25,100,87,56,49,89,72,10,12,2,2,67,0x37B5,150,576,600,240,147775,10000,607,5500,617,5000,617,5000,7563,7000,608,1000,2621,1000,617,5000,607,5000,5123,100,0,0,0,0,0,0,0,0);
+REPLACE INTO `mob_db` VALUES (1785,'ATROCE','Atroce','Atroce',82,1008420,0,295550,118895,2,2526,3646,25,25,100,87,56,49,89,72,10,12,2,2,67,0x37B5,150,576,600,240,147775,10000,607,5500,617,5000,617,5000,7563,7000,608,1000,2621,1000,617,5000,607,5000,5123,100,0,0,0,0,0,0,0,0);
 REPLACE INTO `mob_db` VALUES (1786,'G_AGAV','Agav','Agav',73,25620,0,0,0,1,103,909,15,35,1,32,27,132,69,15,10,12,1,7,40,0x3295,300,768,360,360,0,0,0,0,0,0,0,0,7567,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
 REPLACE INTO `mob_db` VALUES (1787,'G_ECHIO','Echio','Echio',69,36900,0,0,0,1,750,1500,33,11,74,74,52,35,59,56,10,12,1,7,40,0x3295,250,768,360,360,0,0,0,0,0,0,0,0,7567,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
 REPLACE INTO `mob_db` VALUES (1788,'G_ICE_TITAN','Ice Titan','Ice Titan',60,32900,0,0,0,1,1090,1570,71,15,99,34,88,10,79,29,10,12,2,0,61,0x3295,250,861,660,144,0,0,0,0,0,0,0,0,7561,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
